syntax = "proto3";

package pl.vizier.services.metadata;

import "src/common/base/proto/status.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "src/stirling/dynamic_tracing/ir/logicalpb/logical.proto";
import "src/common/uuid/proto/uuid.proto";
import "src/shared/types/proto/types.proto";

option go_package = "pixielabs.ai/pixielabs/src/vizier/services/metadata/storepb;storepb";

// This file contains protos for data that is stored in the metadata service's datastore.
// Along with the protos in this file, the datastore also contains shared protos, such as from agentpb and metadatapb.

// Information about the status of a specific tracepoint.
message TracepointInfo {
  uuidpb.UUID tracepoint_id = 1 [ (gogoproto.customname) = "TracepointID" ];
  // The tracepoint program.
  pl.stirling.dynamic_tracing.ir.logical.Program program = 2;
  // The name of the tracepoint, not unique.
  string tracepoint_name = 3;
  // The desired state of the tracepoint, either running or terminated. The actual
  // state of the tracepoint is derived by the states of the individual agent tracepoints.
  pl.statuspb.LifeCycleState expected_state = 4;
}

// The agent's registration status for a particular tracepoint.
message AgentTracepointStatus {
  // The state of the tracepoint.
  pl.statuspb.LifeCycleState state = 1;
  // The status of the tracepoint, specified if the state of the tracepoint is not healthy.
  pl.statuspb.Status status = 2;
  uuidpb.UUID tracepoint_id = 3 [ (gogoproto.customname) = "TracepointID" ];
  uuidpb.UUID agent_id = 4 [ (gogoproto.customname) = "AgentID" ];
}

// TableInfo contains info about the table in Vizier.
message TableInfo {
  // Name of the table.
  string name = 1;

  // TODO need to move this information to a different message, no need to couple it with ColumnInfo.
  // Maybe in DataInfo?
  // The server unix time in nanoseconds when the schema was available.
  int64 start_timestamp_ns = 2 [
                  (gogoproto.customname) = "StartTimestampNS"
                  ];

  // The unix time in nanoseconds when the schema stopped being available. It will be 0 if there is no stop time.
  int64 stop_timestamp_ns = 3 [
                  (gogoproto.customname) = "StopTimestampNS"
                  ];

  message ColumnInfo {
    string name = 1;
    pl.types.DataType data_type = 2;
    pl.types.PatternType pattern_type = 3;
    // The description of this column.
    string desc = 4;
    pl.types.SemanticType semantic_type = 5;
  }
  // The column info of the schema.
  repeated ColumnInfo columns = 4;
  // Whether the table referenced by this schema is tabletized.
  bool tabletized = 5;
  // The tabletization key of this schema.
  string tabletization_key = 6;
}


// ComputedSchema describes the schema available on Vizier.
message ComputedSchema {
  repeated TableInfo tables = 1;
  message AgentIDs {
    repeated uuidpb.UUID agent_id = 1 [ (gogoproto.customname) = "AgentID" ];
  }
  map<string, AgentIDs> table_name_to_agent_ids = 2
      [ (gogoproto.customname) = "TableNameToAgentIDs" ];
}
